<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:layout_margin="@dimen/two_grid_unit">

    <EditText
        android:id="@+id/login_user_email_Et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/register_fragment_user_email_hint"
        app:layout_constraintBottom_toTopOf="@+id/login_user_password_Et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="t@s.com" />

    <EditText
        android:id="@+id/login_user_password_Et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/two_grid_unit"
        android:hint="@string/register_fragment_user_password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/login_submit_user_Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_user_email_Et" />

    <Button
        android:id="@+id/login_submit_user_Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/two_grid_unit"
        android:text="@string/login_fragment_submit_user_btn"
        app:layout_constraintBottom_toTopOf="@+id/login_forgot_password_Tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_user_password_Et" />

    <TextView
        android:id="@+id/login_forgot_password_Tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/two_grid_unit"
        android:text="@string/fragment_login_forgot_password"
        app:layout_constraintBottom_toTopOf="@+id/login_register_Tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_submit_user_Btn" />

    <TextView
        android:id="@+id/login_register_Tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/two_grid_unit"
        android:text="@string/fragment_login_register_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_forgot_password_Tv" />

    <ProgressBar
        android:id="@+id/login_loading_Pb"
        android:layout_width="@dimen/seven_grid_unit"
        android:layout_height="@dimen/seven_grid_unit"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>